--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -9,20 +9,42 @@ Sample application demonstrating how to use Spring REST Docs with JUnit 5.
 `SampleJUnit5ApplicationTests` makes a call to a very simple service and produces three
 documentation snippets.
 
+GET BEER
+
 One showing how to make a request using cURL:
 
-include::{snippets}/sample/curl-request.adoc[]
+include::{snippets}/v1/beer-get/curl-request.adoc[]
 
 One showing the HTTP request:
 
-include::{snippets}/sample/http-request.adoc[]
+include::{snippets}/v1/beer-get/http-request.adoc[]
 
 And one showing the HTTP response:
 
-include::{snippets}/sample/http-response.adoc[]
+include::{snippets}/v1/beer-get/http-response.adoc[]
 
 Response Body:
-include::{snippets}/orders/response-body.adoc[]
+include::{snippets}/v1/beer-get/response-body.adoc[]
 
 Response Fields:
-include::{snippets}/orders/response-fields.adoc[]
+include::{snippets}/v1/beer-get/response-fields.adoc[]
+
+NEW BEER
+
+One showing how to make a request using cURL:
+
+include::{snippets}/v1/beer-new/curl-request.adoc[]
+
+One showing the HTTP request:
+
+include::{snippets}/v1/beer-new/http-request.adoc[]
+
+And one showing the HTTP response:
+
+include::{snippets}/v1/beer-new/http-response.adoc[]
+
+Response Body:
+include::{snippets}/v1/beer-new/response-body.adoc[]
+
+Response Fields:
+include::{snippets}/v1/beer-new/request-fields.adoc[]
